First term/Assignments solutions/unit 2 - lesson 3 C Basics/Homework 2 solution/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
08:40:18 **** Incremental Build of configuration Debug for project Homework-2_EX-8 ****
Info: Internal Builder is used for build
gcc -o Homework-2_EX-8.exe main.o 
Info: Nothing to build for Homework-2_EX-8
Info: Nothing to build for Homework-2_EX-1
Info: Nothing to build for Homework-2_EX-2
Info: Nothing to build for Homework-2_EX-3
Info: Nothing to build for Homework-2_EX-5
Info: Nothing to build for Homework-2_EX-6
Info: Nothing to build for Homework-2_EX-7
08:40:47 **** Incremental Build of configuration Debug for project Homework-2_EX-8 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o Homework-2_EX-8.exe main.o 
Info: Nothing to build for p
Info: Nothing to build for Homework-2_EX-8
Info: Nothing to build for Homework-2_EX-1
Info: Nothing to build for Homework-2_EX-2
Info: Nothing to build for Homework-2_EX-3
Info: Nothing to build for Homework-2_EX-5
Info: Nothing to build for Homework-2_EX-6
Info: Nothing to build for Homework-2_EX-7
08:41:28 **** Incremental Build of configuration Debug for project Homework-2_EX-8 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o Homework-2_EX-8.exe main.o 
Info: Nothing to build for p
Info: Nothing to build for Homework-2_EX-8
Info: Nothing to build for Homework-2_EX-8
Info: Nothing to build for Homework-2_EX-1
14:23:37 **** Incremental Build of configuration Debug for project Homework-2_EX-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:16:14: error: 'a' undeclared (first use in this function)
  scanf("%c",&a);
              ^
..\main.c:16:14: note: each undeclared identifier is reported only once for each function it appears in
14:23:38 **** Incremental Build of configuration Debug for project Homework-2_EX-3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o Homework-2_EX-3.exe main.o 
Info: Nothing to build for Homework-2_EX-5
Info: Nothing to build for Homework-2_EX-6
Info: Nothing to build for Homework-2_EX-7
14:23:38 **** Incremental Build of configuration Debug for project Homework-2_EX-8 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o Homework-2_EX-8.exe main.o 
Info: Nothing to build for p
Info: Nothing to build for Homework-2_EX-8
Info: Nothing to build for Homework-2_EX-1
14:24:02 **** Incremental Build of configuration Debug for project Homework-2_EX-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:16:14: error: 'a' undeclared (first use in this function)
  scanf("%c",&a);
              ^
..\main.c:16:14: note: each undeclared identifier is reported only once for each function it appears in
Info: Nothing to build for Homework-2_EX-3
Info: Nothing to build for Homework-2_EX-5
Info: Nothing to build for Homework-2_EX-6
Info: Nothing to build for Homework-2_EX-7
14:24:02 **** Incremental Build of configuration Debug for project Homework-2_EX-8 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o Homework-2_EX-8.exe main.o 
Info: Nothing to build for p
Info: Nothing to build for Homework-2_EX-8
